URI/FQDN extraction
